# cyd-palm-bridge

./: .gitignore  Makefile  NOTICE  README.md  addr_prototype.c  pdb_prototype.c  radicale.conf  synctoken
.github/workflows/: ci.yml
bridge/: LICENSE  address.c  appinfo.c  appinfo.h  calc.c  calc.h  charset.c  charset.h  config.c  config.h  datebook.c  dav.c  dav.h  dav_xml.c  dav_xml.h  feeds.c  feeds.h  find.c  find.h  ical.c  main.c  news.c  news.h  palm.h  pdb.c  rss.c  rss.h  sync.c  sync.h  todo.c  tz.c  tz.h  vcard.c
docs/: BACKLOG.md  BUILD_PROGRESS.md  HANDOFF.md  KANA_TRAINER.md  NEXT_STEPS.md  PRODUCT_PLAN.md  REVIEW_2026-07-15.md  ROADMAP.md  SIMULATOR_PLAN.md  UI_ROADMAP.md
firmware/: CMakeLists.txt  config.ini.example  sdkconfig.defaults
firmware/components/bridge/: CMakeLists.txt  dav_esp.c
firmware/main/: CMakeLists.txt  app_main.c  appcfg.c  appcfg.h  clock.c  clock.h  dash.c  dash.h  data.c  data.h  display.c  display.h  graffiti.c  graffiti.h  hotsync.c  hotsync.h  kana_data.c  kana_data.h  kana_strokes.c  kana_strokes.h  kana_write.c  kana_write.h  lv_font_kana.c  lv_font_kana.h  lv_font_palm.c  lv_font_palm.h  lv_font_palm_bold.c  lvgl_port.c  lvgl_port.h  minesweeper.c  minesweeper.h  palm_icons.c  palm_icons.h  power.c  power.h  secrets.h.example  sudoku.c  sudoku.h  touch.c  touch.h  (+4 more)
sim/: Makefile  heap_budget.c  host_main.c  lv_conf.h  sim_heap.h  sim_port.c  sim_port.h  wasm_main.c
sim/include/: esp_log.h  esp_timer.h  nvs.h  secrets.h
sim/stubs/: hotsync_stub.c  power_stub.c
sim/tests/: graf_test.c  mines_test.c  smoke.txt  sudoku_test.c  wordie_test.c
sim/tools/: ppm2png.py
sim/web/: index.html
tests/: bigsync.c  calc_test.c  category.c  config_test.c  dav_roundtrip.sh  feeds_test.c  find_test.c  fuzz_test.c  gate.sh  idempotent.c  incremental.c  multiapp.c  news_test.c  roundtrip.c  rss_test.c  run_gates.sh  streamparse.c  synctoken.c  uidmatch.c
tools/: gen_kana_strokes.py
